# nonprofit-data-pipeline

./: .cursorrules  .env.example  .gitignore  README.md  create_views.py  database_setup.py  generate_sample_data.py  load_data.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  PERFORMANCE.md
docs/integrations/: constantcontact.md  donorperfect.md  iwave.md  neoncrm.md  raisers_edge.md  volunteer_local.md
sql/: views.sql
src/: ai_assistant.py  data_generator.py  schema_inference.py
tests/: test_data_generator.py
